force-app/main/default/objects/AuditTrail__c/AuditTrail__c.object-meta.xml
<CustomObject>
    <label>Audit Trail</label>
    <nameField>
        <displayFormat>AT-{00000}</displayFormat>
        <label>Audit Trail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Trail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>