force-app/main/default/objects/AuditTrail__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Audit Trail</relationshipLabel>
    <relationshipName>Audit_Trail</relationshipName>
    <type>Lookup</type>
</CustomField>