force-app/main/default/objects/AuditTrail__c/fields/Employee_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Employee_Mileage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Mileage</label>
    <referenceTo>Employee_Mileage__c</referenceTo>
    <relationshipLabel>Audit Trail</relationshipLabel>
    <relationshipName>Audit_Trail</relationshipName>
    <type>Lookup</type>
</CustomField>