force-app/main/default/objects/AuditTrail__c/fields/Modifiedby__c.field-meta.xml
<CustomField>
    <fullName>Modifiedby__c</fullName>
    <label>Modified by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>