force-app/main/default/objects/AuditTrail__c/fields/NewValue__c.field-meta.xml
<CustomField>
    <fullName>NewValue__c</fullName>
    <label>New Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>